[2009--] 1.1.1
+ Added Dwoo::setTemplate() for testing purposes mostly
* Fixed a security issue, if you didn't use a custom compiler factory but
  passed the compiler directly to the get method with autoEscape enabled,
  the autoEscape was disabled in included templates - Thanks to Fabien 
  Potencier for notifying me.
* Fixed a bug when accessing array indices that contain a minus sign, it 
  is now possible to access those using {$var[index-foo]}, 
  {$var['index-foo']} or {$index="index-foo"} {$var[$index]}
* Fixed a bug when using the autoEscape feature with sub-templates (the 
  compiled sub-template couldn't access the dwoo charset property, 
  resulting in a fatal error)
* Fixed a property reading bug on objects that implemented __get but not
  __isset, implementing __isset is however very much recommended
* Fixed a bug when accessing global vars from a sub-template

[2009-07-18] 1.1.0
! BC Break: Dwoo::initGlobals() is only called once during the Dwoo object
  construction. If you had overriden it and need to update global data
  before each template is executed you should instead override
  Dwoo::initRuntimeVars() and push stuff in the globals array there. Also
  be aware that this means captured data, foreach values and so-on will
  persist from a parent template to an included one (but the include's
  changes will not be reflected on the parent), and from a template
  to the next if you render several in series.
+ Added {template} plugin that allows you to define sub-templates and then
  call them (works recursively too, good for menus and lists)
+ Added {load_templates} to load external sub-templates into your file
+ Allowed string concatenation assignments with {$foo.="bar"}
+ Allowed access of static properties as {Foo::$bar}
+ Plugins/Helpers that use a dynamic number of arguments through
  func_get_args are now working since the compiler lets any arguments in
  excess pass through